--- a/Ecommerce_webServices_angular/src/main/webapp/WEB-INF/web.xml
+++ b/Ecommerce_webServices_angular/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,6 @@
 	
 <welcome-file-list>
 <welcome-file>index.html</welcome-file>
-<welcome-file>accueilGestionnaire.html</welcome-file>
+<!-- <welcome-file>accueilGestionnaire.html</welcome-file> -->
 </welcome-file-list>
 </web-app>
